--- a/content/AppTarefas/tarefas.html
+++ b/content/AppTarefas/tarefas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Tarefas</title>
     <link rel="stylesheet" href="tarefas.css">
+    <script src="libtarefas.js" defer></script>
     <script src="tarefas.js" defer></script>
 </head>
 <body>
